@@ -128,6 +128,7 @@ LeadStepLabel=Steps Label
 LeadTypeCode=Type code
 LeadTypeLabel=Types Label
 lead@lead=Leads
+ExportDataset_leadPropal=Propal not linked with lead
 
 #
 # List
